--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,15 +173,24 @@ font-size: 13px
     border-radius: 5px;
     border: 0;
     background:  hsl(184, 14%, 56%);
-    margin-top: 5rem
+    margin-top: 7rem
 }
-.pt2 button
-/* class js */
+.pt2 button:hover{
+    background-color: #36BAA9
+} 
 
-.aviso_error{
-    display: inline
-    
+/* resposividade */
+
+@media (min-width: 100px) and (max-width: 660px){
+    .conteiner{
+        flex-direction: column
+    }
+
 }
-.borderjs{
-    border: 1px solid #F00
+@media (min-width: 100px) and (max-width: 700px){
+    .pt2 button{
+        background: #36BAA9
+    }
 }
+
+
